--- a/portafolioWeb/plataformaWeb-usuarios/dashboard.html
+++ b/portafolioWeb/plataformaWeb-usuarios/dashboard.html
@@ -13,7 +13,7 @@
         <header class="header" id="header">
             <div class="user-container" id="user-container">
                 <div id="user-icon" class="user-icon">
-                    <img src="dashboard/img/user-Adm.png" alt="Icono de Usuario" />
+                    <img src="dashboard/img/usuario-Mujer.png" alt="Icono de Usuario" />
                 </div>
                 <div id="options-container" class="options-container hidden">
                     <a href="#" id="change-password-link" class="formulario-link" data-target="modulos/plataformaWeb-modulo-08_registro_de_usuarios/adm-option03-change_password/adm-option03-change_password.html">
